@@ -202,6 +202,9 @@ Other Changes
 * SOLR-5934: LBHttpSolrServer exception handling improvement and small test
   improvements. (Gregory Chanan via Mark Miller)
 
+* SOLR-5773: CollapsingQParserPlugin should make elevated documents the 
+  group head. (David Boychuck, Joel Bernstein)
+
 * SOLR-5937: Modernize the DIH example config sets. (Steve Rowe)
 
 ==================  4.7.1  ==================
